--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "mongodb": "^6.9.0",
     "path": "^0.12.7",
+    "pino": "^9.4.0",
     "typescript": "^5.5.4"
   },
   "scripts": {
@@ -15,6 +17,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
+    "@types/express-session": "^1.18.0",
     "@types/node": "^22.5.4"
   }
 }
