--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
     "include": [
         "src/**/*.ts",
-        "src/*.ts"
+        "src/*.ts",
+        "src/"
     ],
     "compilerOptions": {
         "module": "commonjs",
