--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "express-session": "^1.18.0",
-    "mongodb": "^6.9.0",
+    "google-auth-library": "^9.15.0",
+    "mongodb": "^6.13.1",
     "path": "^0.12.7",
     "pino": "^9.4.0",
+    "typedoc": "^0.26.11",
     "typescript": "^5.5.4"
   },
   "scripts": {
@@ -18,6 +21,10 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.0",
-    "@types/node": "^22.5.4"
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.5.4",
+    "jest": "^29.7.0",
+    "jsdoc": "^4.0.4",
+    "ts-jest": "^29.2.5"
   }
 }
